frontend_tests/negative/duplicate_struct_field/go.mod
module example.com/renvotests/negative/duplicate_struct_field

go 1.25
